dom/bluetooth/bluedroid/hfp/BluetoothHfpManager.h
@@ -209,6 +209,7 @@ private:
   int mCurrentVgm;
   bool mReceiveVgsFlag;
   bool mDialingRequestProcessed;
+  bool mFirstCKPD;
   PhoneType mPhoneType;
   nsString mDeviceAddress;
   nsString mMsisdn;
